# gdscript-sphinx-kivy

./: .gitignore  pyproject.toml
gd2sphinx_docs/docs/source/: conf.py  index.rst
