[tool.poetry]
name = "gdscript2sphinx"
version = "0.1.0"
description = "Generate api documention for Godot projects in sphinx format utilising kivy for the GUI"
authors = ["Douglas Webster <douglas.webster2107@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
