[tool.poetry]
name = "gdscript2sphinx"
version = "0.1.0"
description = "Generate api documention for Godot projects in sphinx format utilising kivy for the GUI"
authors = ["Douglas Webster <douglas.webster2107@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
black = "^21.6b0"
isort = "^5.9.1"
flake8 = "^3.9.2"
bandit = "^1.7.0"
safety = "^1.10.3"
Sphinx = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
